<resources>
    <string name="app_name">SortingAlgorithm</string>

    <string name="title">常用的排序算法</string>
    <string name="loading">正在加载中，请稍后...</string>
    <string name="direct_insertion_sort">直接插入排序</string>
    <string name="hill_sort">希尔排序</string>
    <string name="simple_sorting">简单选择排序</string>
    <string name="heap_sort">堆排序</string>
    <string name="bubble_sort">冒泡排序</string>
    <string name="quick_sort">快速排序</string>
    <string name="merge_sort">归并排序</string>
    <string name="base_sort">基数排序</string>
</resources>
